Bug 416052 - AppImage is missing the account/category templates
Summary: AppImage is missing the account/category templates
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: buildsystem (other bugs)
Version First Reported In: 5.0.7
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-01-09 15:26 UTC by Thomas Baumgart
Modified: 2020-01-11 09:16 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.8
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2020-01-09 15:26:33 UTC
SUMMARY
The AppImage version does not contain any account template

STEPS TO REPRODUCE
1. Run from AppImage w/o having KMyMoney installed on base system
2. Open any file
3. Select File/Import/Account template

OBSERVED RESULT
No templates are shown

EXPECTED RESULT
Templates are shown as if KMyMoney is installed on the base system.
Comment 1 Thomas Baumgart 2020-01-09 18:24:22 UTC
Git commit 7eab5dc6dad122dd90fae25789a36c9b329c6a85 by Thomas Baumgart.
Committed on 09/01/2020 at 18:23.
Pushed by tbaumgart into branch '5.0'.

Fix accessing account templates in AppImage version
FIXED-IN: 5.0.8

M  +16   -0    kmymoney/widgets/kaccounttemplateselector.cpp

https://commits.kde.org/kmymoney/7eab5dc6dad122dd90fae25789a36c9b329c6a85
Comment 2 Thomas Baumgart 2020-01-11 09:16:09 UTC
Git commit d8888d33c150053143c4cd694470cdd25578df7d by Thomas Baumgart.
Committed on 09/01/2020 at 21:44.
Pushed by tbaumgart into branch 'master'.

Fix accessing account templates in AppImage version
FIXED-IN: 5.0.8
(cherry picked from commit 7eab5dc6dad122dd90fae25789a36c9b329c6a85)

M  +16   -0    kmymoney/widgets/kaccounttemplateselector.cpp

https://commits.kde.org/kmymoney/d8888d33c150053143c4cd694470cdd25578df7d