Fix accessing account templates in AppImage version

BUG: 416052
FIXED-IN: 5.0.8